deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: simple-app
  labels:
    app: simple-app
    app.kubernetes.io/component: simple-app
    app.kubernetes.io/instance: simple-app
    app.kubernetes.io/name: simple-app
    app.kubernetes.io/part-of: simple-app
    app.openshift.io/runtime: quarkus
    app.openshift.io/runtime-namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simple-app
        deployment: simple-app
    spec:
      containers:
        - name: simple-app
          image: quay.io/rh_ee_slallema/simple-app:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
