deploy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: simple-app
  labels:
    app: simple-app
    app.kubernetes.io/component: simple-app
    app.kubernetes.io/instance: simple-app
    app.kubernetes.io/name: simple-app
    app.kubernetes.io/part-of: simple-app
    app.openshift.io/runtime-version: latest
spec:
  to:
    kind: Service
    name: simple-app
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
